--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
 #  path: ^1.6.0
   build_cli_annotations: ^1.0.0
+  shell: ^1.0.1
 
 dev_dependencies:
   pedantic: ^1.8.0
